Crash switching to vertex paint (from editmode, mesh with modifier, after adding/removing geometry in editmode) #72028

Closed
opened 2019-11-28 22:15:52 +01:00 by Jan Bláha · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Operating system: Linux-5.4.17-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Broken: version: 2.83 (sub 6), branch: master (modified), commit date: 2020-03-03 09:01, hash: b454a12233
Worked: 2.79b -

Short description of error
Crash switching to vertex paint (from editmode, mesh with modifier, after adding/removing geometry in editmode)

Exact steps for others to reproduce the error

#72028.blend

  • have a mesh object with any modifier (just open above file)
  • enter editmode (already the case in above file)
  • add geometry (just duplicate selected vertices)
  • switch to vertex paint mode
  • crash
    notes:
  • object_eval->runtime.mesh_deform_eval does not seem to be updated with new/generated geometry somehow while in editmode? [checked this in BKE_sculpt_object_pbvh_ensure when entering vertexpaint from editmode]
  • everything is fine if you exit and renter editmode prior to switching to vertex paint
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 Operating system: Linux-5.4.17-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Broken: version: 2.83 (sub 6), branch: master (modified), commit date: 2020-03-03 09:01, hash: `b454a12233` Worked: 2.79b - **Short description of error** Crash switching to vertex paint (from editmode, mesh with modifier, after adding/removing geometry in editmode) **Exact steps for others to reproduce the error** [#72028.blend](https://archive.blender.org/developer/F8385028/T72028.blend) - have a mesh object with any modifier (just open above file) - enter editmode (already the case in above file) - add geometry (just duplicate selected vertices) - switch to vertex paint mode - crash notes: - `object_eval->runtime.mesh_deform_eval` does not seem to be updated with new/generated geometry somehow while in editmode? [checked this in `BKE_sculpt_object_pbvh_ensure` when entering vertexpaint from editmode] - everything is fine if you exit and renter editmode prior to switching to vertex paint

Added subscriber: @swift502

Added subscriber: @swift502

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

I can confirm.
By the way, before the crash this assert is raised:

BLI_assert failed: src\blender\blenkernel\intern\pbvh.c:2565, BKE_pbvh_vert_coords_apply(), at '!"PBVH: Given deforming vcos number does not natch PBVH vertex number!"'

(assert added in 934b9e80. @mont29, do you know what may be happening?)

I can confirm. By the way, before the crash this assert is raised: ``` BLI_assert failed: src\blender\blenkernel\intern\pbvh.c:2565, BKE_pbvh_vert_coords_apply(), at '!"PBVH: Given deforming vcos number does not natch PBVH vertex number!"' ``` (assert added in 934b9e80. @mont29, do you know what may be happening?)

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Couple of notes:

  • no need to add a monkey, any generation of a face will do here (e.g. just extruding that single edge)
  • in fact, this doesnt even have to be a mesh with edges only to start of, culprit is just adding geometry in editmode (so duplicating an existing face will also do, see file below)
  • no need for a particle system, seems like any modifier will do here (e.g. in that file, remove the particle system, add a Simple Deform modifier, same thing happens
  • everything is fine if you exit and renter editmode
  • object_eval->runtime.mesh_deform_eval does not seem to be updated with new/generated geometry somehow while in editmode? [checked this in BKE_sculpt_object_pbvh_ensure when entering vertexpaint from editmode]

so to recap:

  • have a mesh object with any modifier
  • enter editmode
  • add geometry
  • switch to vertex paint mode
  • crash

#72028.blend

will update report accodingly

Couple of notes: - no need to add a monkey, **any** generation of a face will do here (e.g. just extruding that single edge) - in fact, this doesnt even have to be a mesh with edges only to start of, culprit is just adding geometry in editmode (so duplicating an existing face will also do, see file below) - no need for a particle system, seems like **any** modifier will do here (e.g. in that file, remove the particle system, add a `Simple Deform` modifier, same thing happens - everything is fine if you exit and renter editmode - `object_eval->runtime.mesh_deform_eval` does not seem to be updated with new/generated geometry somehow while in editmode? [checked this in `BKE_sculpt_object_pbvh_ensure` when entering vertexpaint from editmode] so to recap: - have a mesh object with any modifier - enter editmode - add geometry - switch to vertex paint mode - crash [#72028.blend](https://archive.blender.org/developer/F8385028/T72028.blend) will update report accodingly
Philipp Oeser changed title from Crash related to vertex paint and particle physics to Crash switching to vertex paint (from editmode, mesh with modifier, after adding/removing geometry in editmode) 2020-03-03 15:52:25 +01:00
Philipp Oeser self-assigned this 2020-03-03 16:10:26 +01:00

will check on it

will check on it

This issue was referenced by c7e28f25d5

This issue was referenced by c7e28f25d58ab1277712e6d8ed6293f8d39e1758

This issue was referenced by 31aefdeec5

This issue was referenced by 31aefdeec5a6e098acabee80517aa6ca03933808

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72028
There is no content yet.